test/types/bool/bradc/numBitsBytesDefault.good
numBitsBytesDefault.chpl:3: In function 'printSizes':
numBitsBytesDefault.chpl:4: error: default-width 'bool' does not have a well-defined size
numBitsBytesDefault.chpl:9: Function 'printSizes' instantiated as: printSizes(type t = bool)
